@@ -1,3 +1,6 @@
+Thu Jul 27 2017 Aleksey
+	* Bugfix: fix access to long paths on Windows
+
 Mon Jul 17 2017 Aleksey
 	* add ca, fr, ro translations
 
